# local-mcp-server

./: .gitignore  LICENSE  MIGRATION_STATUS.md  README.md  test_with_inspector.sh
docs/: STRUCTURED_OUTPUT.md  TOOL_CONVERSION_GUIDE.md  configuration.md  creating-tools.md  discovery-system.md  host-adapters.md  host-compatibility.md  installation.md
examples/claude-desktop/: README.md  mcp-config.json
examples/generic-mcp/: README.md  mcp-config.json
scripts/: setup.sh
server/: README.md  build_tools.py  discover_tools.py  pyproject.toml  start_server.sh  test_param_validation.py  test_path_traversal.py
server/config/: .discovery_timestamp
server/config/tools/: TEMPLATE.json  demo-features.json  file-ops.json  http-client.json  pwod.json  system-info.json  text-utils.json
server/config_templates/: claude-desktop.json.template  docker-compose.yml.template  generic-mcp.json.template  google-gemini-cli.json.template
server/src/local_mcp/: __init__.py  config.py  dependency_manager.py  discovery.py  executor.py  executor_limits.py  logging_config.py  sanitization.py  server.py  utils.py
server/src/local_mcp/adapters/: __init__.py  base.py  claude_desktop.py  factory.py  generic.py  google_gemini.py
server/tests/: README.md  TESTING_SUMMARY.md  run_tests.py  test_argument_building.py  test_audit_logging.py  test_error_sanitization.py  test_fire_argparse_integration.py  test_mcp_upgrade.py  test_redaction.py  test_resource_limits.py  test_temp_cleanup.py  test_tool_execution.py
server/venvs/argparse-test/: pyvenv.cfg
server/venvs/demo-features/: pyvenv.cfg
server/venvs/file-ops/: pyvenv.cfg
server/venvs/http-client/: pyvenv.cfg
server/venvs/system-info/: pyvenv.cfg
server/venvs/text-utils/: pyvenv.cfg
web-interface/: pyproject.toml  start_dev.sh
web-interface/backend/: __init__.py  main.py
web-interface/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-interface/frontend/src/: App.tsx  api.ts  types.ts
web-interface/frontend/src/components/: AddToolWizard.tsx  Dashboard.tsx  HelpDocumentation.tsx  ServerManagement.tsx  ServerMonitoring.tsx  TagDropdown.tsx  TestOutput.tsx  TestScriptEditor.tsx  ToolConfig.tsx  ToolList.tsx  Tooltip.tsx
web-interface/frontend/src/contexts/: NotificationContext.tsx
(+27 files in other folders)
