[project]
name = "local-mcp-server"
version = "0.1.0"
description = "Local MCP server for executing scripts in tools directory"
authors = [
    {name = "kunlu", email = "mail2kun@gmail.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.0.0",
    "mysql-connector-python>=9.4.0",
    "sqlalchemy>=2.0.43",
    "networkx>=3.5",
    "matplotlib>=3.10.5",
    "fire>=0.7.1",
    "python-dotenv>=1.1.1",
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
]

[project.scripts]
local-mcp-server = "local_mcp.server:sync_main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long handled by black

[tool.ruff.isort]
known-first-party = ["local_mcp"]
